--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
-  "name": "@ZinBu/cards-game-launcher",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+  "name": "@zinbu/cards-game-launcher",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "files": [
+    "src",
+    "lib",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__",
+    "dist"
+  ],
+  "repository": "git://github.com/zinbu/cards-game-launcher",
+  "publishConfig": {
+    "@zinbu:registry": "https://npm.pkg.github.com"
   },
-  "dependencies": {
+  "version": "0.0.1",
+  "scripts": {
+    "prepack": "bob build"
+  },
+  "peerDependencies": {
     "@expo/webpack-config": "^0.17.0",
     "expo": "~46.0.21",
     "expo-av": "12.0.4",
@@ -24,7 +35,22 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "react-native-builder-bob": "^0.21.3",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": false,
+  "react-native": "src/index.ts",
+  "types": "lib/typescript/src/index.d.ts",
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module"
+    ]
+  },
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/"
+  ]
 }
